英語の勉強をしよう

--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
 </head>
 <body>
   <div class=header>
-    <h1>たいとる</h1>
-    <div>せつめいせつめい</div>
+    <h1>コンパクト英語構文</h1>
+    <div>CD着き</div>
   </div>
   <div class=main>
     <div>
-      <h2>さぶたいとる１</h2>
+      <h2>南出康世　監修</h2>
       <div>
         ほんぶん１
       </div>
     </div>
 
     <div>
-      <h2>さぶたいとる２</h2>
+      <h2>大阪女子大学名誉教授</h2>
       <div>
         ほんぶん２
       </div>
