--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <div class=header>
-    <h1>コンパクト英語構文</h1>
+    <h1>コンパクト英語構文90</h1>
     <div>CD着き</div>
   </div>
   <div class=main>
