--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <link rel="stylesheet" href="index.css"/>
 </head>
-<body>
+<body　style="background: rgb(255,250,20);">
   <div class=header>
     <h1>コンパクト英語構文90</h1>
     <div>CD着き</div>
