--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div>
       <h2>大阪女子大学名誉教授</h2>
       <div>
-        ほんぶん２
+        おおさかじょしだいがく おほさかヂョシダイガクおおさかじょしだいがく〔おほさかヂヨシダイガク〕
       </div>
     </div>
   </div>
