--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
     </div>
   </div>
   <div class=footer>
-    ふったー
+    新型コロナウイルス感染拡大予防マニュアルを策定しました
+    （１）学生の健康・安全を最優先とします 。
+（２）感染状況が 好転しない場合は 、オンライン授業を展開して教育の質の保証に努めます 。
+（３）感染状況が好転した場合は 、大学の施設の開放と一部の対面授業を再開します。
+（４）地域によって、感染状況が異なるので、当面、登校や対面授業への参加は各自で判断してください。対面授業に参加できない場合、オンライン授業を行います 。
+（５）大学としての基本的なスタンスは「焦らず 、徐々に」とします。
     <img src="イラストや.png">
   </div>
 </body>
